--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -3,4 +3,11 @@
   font-weight: 600;
   font-size: 1.125rem;
   line-height: 1.375rem;
+  background: none;
+  border: none;
+  transition: filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.8);
+  }
 }
