--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,62 @@
-// TODO
+.banner {
+  width: 100%;
+  height: 25rem;
+  margin-bottom: 5rem;
+}
+
+.title {
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 3.625rem;
+  margin-bottom: 1.5rem;
+  color: var(--gray-100);
+}
+
+.infos {
+  display: flex;
+  margin-bottom: 4.125rem;
+
+  div {
+    margin-right: 1.5rem;
+    display: flex;
+    align-items: center;
+
+    svg {
+      width: 1.25rem;
+      height: 1.25rem;
+      margin-right: 0.5rem;
+      color: var(--gray-500);
+    }
+
+    p,
+    time {
+      color: var(--gray-500);
+      font-size: 0.875rem;
+      line-height: 1.0625rem;
+      margin: 0;
+      font-weight: 400;
+    }
+  }
+}
+
+.postContent {
+  margin-bottom: 4rem;
+
+  h3 {
+    font-weight: 700;
+    font-size: 2.25rem;
+    line-height: 3.125px;
+    color: var(--gray-100);
+    margin-bottom: 4rem;
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.5625rem;
+    margin-bottom: 1rem;
+    color: var(--gray-100);
+    margin-bottom: 2rem;
+    text-align: justify;
+  }
+}
