--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -13,28 +13,41 @@
 }
 
 .infos {
-  display: flex;
   margin-bottom: 4.125rem;
 
-  div {
-    margin-right: 1.5rem;
+  div:first-of-type {
     display: flex;
-    align-items: center;
 
-    svg {
-      width: 1.25rem;
-      height: 1.25rem;
-      margin-right: 0.5rem;
-      color: var(--gray-500);
+    div {
+      margin-right: 1.5rem;
+      display: flex;
+      align-items: center;
+
+      svg {
+        width: 1.25rem;
+        height: 1.25rem;
+        margin-right: 0.5rem;
+        color: var(--gray-500);
+      }
+
+      p,
+      time {
+        color: var(--gray-500);
+        font-size: 0.875rem;
+        line-height: 1.0625rem;
+        margin: 0;
+        font-weight: 400;
+      }
     }
+  }
 
-    p,
-    time {
-      color: var(--gray-500);
+  .lastEdit {
+    margin-top: 1rem;
+
+    p {
       font-size: 0.875rem;
-      line-height: 1.0625rem;
-      margin: 0;
-      font-weight: 400;
+      color: var(--gray-500);
+      font-style: italic;
     }
   }
 }
@@ -58,5 +71,37 @@
     color: var(--gray-100);
     margin-bottom: 2rem;
     text-align: justify;
+  }
+}
+
+.divider {
+  height: 0;
+  border: 1px solid #d7d7d7;
+  opacity: 0.1;
+  margin-bottom: 3rem;
+}
+
+.links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 5rem;
+
+  a {
+    p {
+      font-size: 1.375rem;
+      color: var(--gray-100);
+      margin-bottom: 0.5rem;
+    }
+
+    strong {
+      font-weight: 600;
+      font-size: 1rem;
+      color: var(--pink-500);
+    }
+
+    &.nextLink {
+      text-align: right;
+      grid-column: 2;
+    }
   }
 }
